Implemented sending an activation key after registration is completed. Implemented verifying the activation key for the activation user.
