# backend/api_v1/static/swagger/schema.yml
@@ -29,7 +29,6 @@ paths:
           in: header
           description: Токен администратора
           required: true
-
           schema:
             type: object
             $ref: '#/definitions/Token'
@@ -105,6 +104,34 @@ paths:
             $ref: '#/definitions/User'
         403:
           description: Логин занят, регистрация невозможна
+          schema:
+            $ref: '#/definitions/ErrorMsg'
+  /auth/verify:
+    get:
+      tags:
+        - name: Auth
+      summary: Проверка кода активации и активация пользователя
+      consumes:
+        - application/json
+      parameters:
+        - name: email
+          in: query
+          description: Электронная почта пользователя.
+          required: true
+          type: string
+        - name: activation_key
+          in: query
+          description: Код активации.
+          required: true
+          type: string
+
+      responses:
+        200:
+          description: Активация успешна
+        402:
+          description: Неверный адрес электронной почты или код активации
+          schema:
+            $ref: '#/definitions/ErrorMsg'
   /auth/user/{id}:
     get:
       tags:
@@ -144,6 +171,7 @@ paths:
           description: Нет прав на изменение профиля
           schema:
             $ref: '#/definitions/ErrorMsg'
+
 definitions:
   User:
     type: object
@@ -197,7 +225,20 @@ definitions:
     type: array
     items:
       $ref: '#/definitions/User'
-
+  ActivationData:
+    type: object
+    required:
+      - activation_key
+      - email
+    properties:
+      activation_key:
+        type: string
+        example: LCJleHAiOjE2MDI5NjUzMjh9.R52zWTcjK5_MsAfthxXSGd
+        description: Уникальный код активации пользователя
+      email:
+        type: string
+        example: mail@mail.ru
+        description: Адресс электронной почты пользователя
   Token:
     type: object
     required:
