# backend/authapp/models.py
@@ -14,7 +14,7 @@ from uniteams import settings
 
 
 class UniteamsUser(AbstractUser):
-    activation_key = models.CharField(max_length=128,
+    activation_key = models.CharField(max_length=255,
                                       blank=True)
     activation_key_expires = models.DateTimeField(default=(now() + timedelta(hours=settings.EXP_ACTIVATION_KEY)))
 
@@ -32,6 +32,7 @@ class UniteamsUser(AbstractUser):
 
         return token.decode('utf-8')
 
+    @property
     def is_activation_key_expired(self):
         if now() <= self.activation_key_expires:
             return False
